kubernetes/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: stockticker-service
spec:
  selector:
    deployment: stockticker
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
