kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: {}
  name: stockticker-ingress
spec:
  rules:
  - host: stockticker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stockticker-service
            port: 
              number: 8080
